kubernetes/issuance-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: issuance-service
  labels:
    app: issuance-service
spec:
  type: ClusterIP
  selector:
    app: issuance-service
  ports:
  - protocol: TCP
    port: 3001
    targetPort: 3001
