kubernetes/verification-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: verification-service
  labels:
    app: verification-service
spec:
  type: ClusterIP
  selector:
    app: verification-service
  ports:
  - protocol: TCP
    port: 3002
    targetPort: 3002
